# DjangoStockPOC

./: .env.prod  .gitignore  Dockerfile  LocalFolioPOC.im  Makefile  Pipfile  README.md  docker-compose.yml  manage.py  mypi.ini  pyproject.toml  setup.cfg
DjangoStockPOC/: asgi.py  wsgi.py
DjangoStockPOC/settings/: base.py
LocalFolioPOC/: apps.py  serializers.py  urls.py  wsgi.py
LocalFolioPOC/api/: views.py
LocalFolioPOC/migrations/: 0001_initial.py  0002_company_stockhistory.py
LocalFolioPOC/settings/: base.py  production.py
data/: offline.json
finance/: filters.py  models.py  serializers.py  urls.py  views.py
finance/api/: views.py
finance/management/commands/: initialize.py
finance/migrations/: 0001_initial.py
finance/templatetags/: financetags.py
finance/tests/: test_urls.py  test_views.py
microservice/: urls.py
microservice/settings/: base.py
nginx/: nginx.conf
templates/: _base.html  index.html  stock_detail.html  stockhistory_list.html
templates/static/css/: styles.css
