[tool.poetry]
name = "djangostockpoc"
version = "0.1.0"
description = "A django application to display stock price"
authors = ["girisagar46"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.12.4"
Django = "^3.2.8"
django-filter = "^21.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
